--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -1,5 +1,5 @@
 river:
-  name: "River - Accounts Service - DEV"
+  name: "River - Accounts Service - DEV - GIT"
   age: 30
   address:
     city: "Pune"
