--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -1,5 +1,5 @@
 river:
-  name: "River - Accounts Service - DEV - GITCHANGED"
+  name: "River - Accounts Service - DEV - Webhookdesk"
   age: 30
   info: "RabbitMQ Test"
   address:
