--- a/gatewayserver.yml
+++ b/gatewayserver.yml
@@ -3,9 +3,9 @@ server:
 
 eureka:
   instance:
-    preferIpAddress: true
+    prefer-ip-address: true
   client:
-    registerWithEureka: true
     fetchRegistry: true
+    registerWithEureka: true
     serviceUrl:
-      defaultZone: "http://localhost:8070/eureka/"
+      defaultZone: http://localhost:8070/eureka/
